--- a/application/admin/view/unishop/product/add.html
+++ b/application/admin/view/unishop/product/add.html
@@ -8,9 +8,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Category_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-category_id" data-rule="required" data-source="unishop/category/index"
-                   data-params='{"custom[type]":"product"}' class="form-control selectpage" name="row[category_id]"
-                   type="text" value="">
+            {$categoryList}
         </div>
     </div>
     <div class="form-group">
